JEDIT 4.0 VERSION HISTORY

* Version 4.0pre6

+ New Features

- Modula-3 syntax highlighting (Marcio Marchini)

+ Enhancements

- Minor tweaks to VFS path code, that should make things a bit smoother
  for the FTP plugin
- Updated Prolog syntax highlighting (Giulio Piancastelli)

+ Bug Fixes

- Malformed URL errors were not being reported correctly
- Fixed exception when double- or triple-click dragging (this was meant
  to be fixed in pre5 but I didn't get the fix quite right)
- Fixed NullPointerException when opening a new view
- Out of memory errors were not always reported
- Fixed minor inconsistency in handling of words -vs- keywords in
  'Complete Word' command
- Properly fixed 'unprintable characters in table of contents' bug
- Replace in selection would preserve the current selection, but not
  the caret position, so if there was a match at the start of the
  selection, the caret would move inside the selected range
- On Windows, double-clicking on a drive letter in the drives list of
  the file system browser would open the wrong location
- Fixed obscure focus manager bug under JDK 1.4 that would manifest when
  splitting the view
- The status bar message shown when a bracket is out of bounds was not
  always being displayed if soft wrap was in use
- Fixed silly behavior in 'Install Plugins' dialog box

+ API Additions

- Support for macros written in other languages (Mike Dillon)
  - Macros.registerHandler(Macros.Handler handler) method
  - Macros.Handler interface has these methods:

    public abstract Macro createMacro(String macroName, String path);
    public abstract void runMacro(View view, Macro macro);
    protected Handler(String name)

  - 'name' is used to key "macro-handler.<name>.label" and
    "macro-handler.<name>.glob" properties.

* Version 4.0pre5

+ New Features

- ObjectRexx syntax highlighting (George Hovey)

+ Enhancements

- If jEdit runs out of memory while loading a file, it now reports the